[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Main.gd" id="1_5p8v1"]
[ext_resource type="Script" path="res://TileManager.gd" id="2_tilemanager"]
[ext_resource type="Script" path="res://WorldGenerator.gd" id="3_worldgenerator"]
[ext_resource type="Script" path="res://WorldRenderer.gd" id="4_worldrenderer"]

[node name="Main" type="Node2D"]
script = ExtResource("1_5p8v1")

[node name="TileManager" type="Node2D" parent="."]
script = ExtResource("2_tilemanager")

[node name="WorldGenerator" type="Node2D" parent="."]
script = ExtResource("3_worldgenerator")

[node name="WorldRenderer" type="Node2D" parent="."]
script = ExtResource("4_worldrenderer")
